polyline not polygon